# GoodBoyDrone

./: CMakeLists.txt  LICENSE  README.md  statsplots_GS1.py
pics/: statsplots_GS1.py  statsplots_eval1.py
pics/CosyneGS1/: gsCoSyNE128_0.025000_0.300000_run0.csv.csv  gsCoSyNE128_0.025000_0.300000_run1.csv.csv  gsCoSyNE128_0.025000_0.300000_run2.csv.csv  gsCoSyNE128_0.025000_0.300000_run3.csv.csv  gsCoSyNE128_0.025000_0.300000_run4.csv.csv  gsCoSyNE128_0.025000_0.500000_run0.csv.csv  gsCoSyNE128_0.025000_0.500000_run1.csv.csv  gsCoSyNE128_0.025000_0.500000_run2.csv.csv  gsCoSyNE128_0.025000_0.500000_run3.csv.csv  gsCoSyNE128_0.025000_0.500000_run4.csv.csv  gsCoSyNE128_0.050000_0.300000_run0.csv.csv  gsCoSyNE128_0.050000_0.300000_run1.csv.csv  gsCoSyNE128_0.050000_0.300000_run2.csv.csv  gsCoSyNE128_0.050000_0.300000_run3.csv.csv  gsCoSyNE128_0.050000_0.300000_run4.csv.csv  gsCoSyNE128_0.050000_0.500000_run0.csv.csv  gsCoSyNE128_0.050000_0.500000_run1.csv.csv  gsCoSyNE128_0.050000_0.500000_run2.csv.csv  gsCoSyNE128_0.050000_0.500000_run3.csv.csv  gsCoSyNE128_0.050000_0.500000_run4.csv.csv  gsCoSyNE128_0.100000_0.300000_run0.csv.csv  gsCoSyNE128_0.100000_0.300000_run1.csv.csv  gsCoSyNE128_0.100000_0.300000_run2.csv.csv  gsCoSyNE128_0.100000_0.300000_run3.csv.csv  gsCoSyNE128_0.100000_0.300000_run4.csv.csv  gsCoSyNE128_0.100000_0.500000_run0.csv.csv  gsCoSyNE128_0.100000_0.500000_run1.csv.csv  gsCoSyNE128_0.100000_0.500000_run2.csv.csv  gsCoSyNE128_0.100000_0.500000_run3.csv.csv  gsCoSyNE128_0.100000_0.500000_run4.csv.csv  gsCoSyNE128_0.200000_0.300000_run0.csv.csv  gsCoSyNE128_0.200000_0.300000_run1.csv.csv  gsCoSyNE128_0.200000_0.300000_run2.csv.csv  gsCoSyNE128_0.200000_0.300000_run3.csv.csv  gsCoSyNE128_0.200000_0.300000_run4.csv.csv  gsCoSyNE128_0.200000_0.500000_run0.csv.csv  gsCoSyNE128_0.200000_0.500000_run1.csv.csv  gsCoSyNE128_0.200000_0.500000_run2.csv.csv  gsCoSyNE128_0.200000_0.500000_run3.csv.csv  gsCoSyNE128_0.200000_0.500000_run4.csv.csv  (+1 more)
src/: cosyne.hpp  drone.hpp  ea.hpp  easyea.hpp  loader.hpp  main.cpp  net.hpp  renderer.hpp  runner.hpp  utils.hpp
(+60 files in other folders)
